crates/crane/src/snapshots/crane__parser__tests__parser@functions.crane.snap
---
source: crates/crane/src/parser.rs
expression: parser.parse()
input_file: crates/crane/src/snapshot_inputs/functions.crane
---
Ok:
  - kind:
      Use:
        prefix:
          segments:
            - ident:
                name: std
                span:
                  start: 4
                  end: 7
            - ident:
                name: io
                span:
                  start: 9
                  end: 11
            - ident:
                name: println
                span:
                  start: 13
                  end: 20
          span:
            start: 0
            end: 0
        kind: Single
    name:
      name: ""
      span:
        start: 0
        end: 0
  - kind:
      Fn:
        params: []
        return_ty: ~
        body:
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: say_hello
                                span:
                                  start: 42
                                  end: 51
                          span:
                            start: 42
                            end: 51
                      span:
                        start: 42
                        end: 51
                    args: []
                span:
                  start: 42
                  end: 51
            span:
              start: 42
              end: 51
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: say_goodbye
                                span:
                                  start: 58
                                  end: 69
                          span:
                            start: 58
                            end: 69
                      span:
                        start: 58
                        end: 69
                    args: []
                span:
                  start: 58
                  end: 69
            span:
              start: 58
              end: 69
    name:
      name: main
      span:
        start: 29
        end: 33
  - kind:
      Fn:
        params: []
        return_ty: ~
        body:
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: println
                                span:
                                  start: 96
                                  end: 103
                          span:
                            start: 96
                            end: 103
                      span:
                        start: 96
                        end: 103
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\"Hello\""
                        span:
                          start: 104
                          end: 111
                span:
                  start: 96
                  end: 103
            span:
              start: 96
              end: 103
    name:
      name: say_hello
      span:
        start: 78
        end: 87
  - kind:
      Fn:
        params: []
        return_ty: ~
        body:
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: println
                                span:
                                  start: 139
                                  end: 146
                          span:
                            start: 139
                            end: 146
                      span:
                        start: 139
                        end: 146
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\"Goodbye\""
                        span:
                          start: 147
                          end: 156
                span:
                  start: 139
                  end: 146
            span:
              start: 139
              end: 146
    name:
      name: say_goodbye
      span:
        start: 119
        end: 130

