crates/crane/src/snapshots/crane__parser__tests__parser@hello_world.crane.snap
---
source: crates/crane/src/parser.rs
expression: parser.parse()
input_file: crates/crane/src/snapshot_inputs/hello_world.crane
---
Ok:
  - kind:
      Use:
        prefix:
          segments:
            - ident:
                name: std
                span:
                  start: 4
                  end: 7
            - ident:
                name: io
                span:
                  start: 9
                  end: 11
            - ident:
                name: println
                span:
                  start: 13
                  end: 20
          span:
            start: 0
            end: 0
        kind: Single
    name:
      name: ""
      span:
        start: 0
        end: 0
  - kind:
      Fn:
        params: []
        return_ty: Unit
        body:
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: println
                                span:
                                  start: 42
                                  end: 49
                          span:
                            start: 42
                            end: 49
                      span:
                        start: 42
                        end: 49
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\"Hello, world!\""
                        span:
                          start: 50
                          end: 65
                span:
                  start: 42
                  end: 49
            span:
              start: 42
              end: 49
    name:
      name: main
      span:
        start: 29
        end: 33

