crates/crane/src/snapshots/crane__parser__tests__parser@let_bindings.crane.snap
---
source: crates/crane/src/parser.rs
expression: parser.parse()
input_file: crates/crane/src/snapshot_inputs/let_bindings.crane
---
Ok:
  - kind:
      Fn:
        params: []
        return_ty: ~
        body:
          - kind:
              Local:
                kind:
                  Init:
                    kind:
                      Literal:
                        kind: String
                        value: "\"Arya\""
                    span:
                      start: 31
                      end: 37
                name:
                  name: name
                  span:
                    start: 24
                    end: 28
                ty: ~
                span:
                  start: 24
                  end: 28
            span:
              start: 24
              end: 28
          - kind:
              Local:
                kind:
                  Init:
                    kind:
                      Literal:
                        kind: Integer
                        value: "100"
                    span:
                      start: 53
                      end: 56
                name:
                  name: gold
                  span:
                    start: 46
                    end: 50
                ty: ~
                span:
                  start: 46
                  end: 50
            span:
              start: 46
              end: 50
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: std
                                span:
                                  start: 62
                                  end: 65
                            - ident:
                                name: io
                                span:
                                  start: 67
                                  end: 69
                            - ident:
                                name: print
                                span:
                                  start: 71
                                  end: 76
                          span:
                            start: 62
                            end: 76
                      span:
                        start: 62
                        end: 76
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\"Hello, \""
                        span:
                          start: 77
                          end: 86
                span:
                  start: 62
                  end: 76
            span:
              start: 62
              end: 76
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: std
                                span:
                                  start: 92
                                  end: 95
                            - ident:
                                name: io
                                span:
                                  start: 97
                                  end: 99
                            - ident:
                                name: print
                                span:
                                  start: 101
                                  end: 106
                          span:
                            start: 92
                            end: 106
                      span:
                        start: 92
                        end: 106
                    args:
                      - kind:
                          Variable:
                            segments:
                              - ident:
                                  name: name
                                  span:
                                    start: 107
                                    end: 111
                            span:
                              start: 107
                              end: 111
                        span:
                          start: 107
                          end: 111
                span:
                  start: 92
                  end: 106
            span:
              start: 92
              end: 106
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: std
                                span:
                                  start: 117
                                  end: 120
                            - ident:
                                name: io
                                span:
                                  start: 122
                                  end: 124
                            - ident:
                                name: println
                                span:
                                  start: 126
                                  end: 133
                          span:
                            start: 117
                            end: 133
                      span:
                        start: 117
                        end: 133
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\".\""
                        span:
                          start: 134
                          end: 137
                span:
                  start: 117
                  end: 133
            span:
              start: 117
              end: 133
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: std
                                span:
                                  start: 144
                                  end: 147
                            - ident:
                                name: io
                                span:
                                  start: 149
                                  end: 151
                            - ident:
                                name: print
                                span:
                                  start: 153
                                  end: 158
                          span:
                            start: 144
                            end: 158
                      span:
                        start: 144
                        end: 158
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\"You currently have \""
                        span:
                          start: 159
                          end: 180
                span:
                  start: 144
                  end: 158
            span:
              start: 144
              end: 158
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: std
                                span:
                                  start: 186
                                  end: 189
                            - ident:
                                name: io
                                span:
                                  start: 191
                                  end: 193
                            - ident:
                                name: print
                                span:
                                  start: 195
                                  end: 200
                          span:
                            start: 186
                            end: 200
                      span:
                        start: 186
                        end: 200
                    args:
                      - kind:
                          Call:
                            fun:
                              kind:
                                Variable:
                                  segments:
                                    - ident:
                                        name: std
                                        span:
                                          start: 201
                                          end: 204
                                    - ident:
                                        name: int
                                        span:
                                          start: 206
                                          end: 209
                                    - ident:
                                        name: int_to_string
                                        span:
                                          start: 211
                                          end: 224
                                  span:
                                    start: 201
                                    end: 224
                              span:
                                start: 201
                                end: 224
                            args:
                              - kind:
                                  Variable:
                                    segments:
                                      - ident:
                                          name: gold
                                          span:
                                            start: 225
                                            end: 229
                                    span:
                                      start: 225
                                      end: 229
                                span:
                                  start: 225
                                  end: 229
                        span:
                          start: 201
                          end: 224
                span:
                  start: 186
                  end: 200
            span:
              start: 186
              end: 200
          - kind:
              Expr:
                kind:
                  Call:
                    fun:
                      kind:
                        Variable:
                          segments:
                            - ident:
                                name: std
                                span:
                                  start: 236
                                  end: 239
                            - ident:
                                name: io
                                span:
                                  start: 241
                                  end: 243
                            - ident:
                                name: println
                                span:
                                  start: 245
                                  end: 252
                          span:
                            start: 236
                            end: 252
                      span:
                        start: 236
                        end: 252
                    args:
                      - kind:
                          Literal:
                            kind: String
                            value: "\" gold at your disposal.\""
                        span:
                          start: 253
                          end: 278
                span:
                  start: 236
                  end: 252
            span:
              start: 236
              end: 252
    name:
      name: main
      span:
        start: 7
        end: 11

