crates/crane/src/snapshots/crane__parser__tests__parser@struct_decls.crane.snap
---
source: crates/crane/src/parser.rs
expression: parser.parse()
input_file: crates/crane/src/snapshot_inputs/struct_decls.crane
---
Ok:
  - kind:
      Struct:
        Struct:
          - name:
              name: x
              span:
                start: 19
                end: 20
            ty:
              name: Uint64
              span:
                start: 22
                end: 28
            span:
              start: 19
              end: 20
          - name:
              name: y
              span:
                start: 34
                end: 35
            ty:
              name: Uint64
              span:
                start: 37
                end: 43
            span:
              start: 34
              end: 35
    name:
      name: Point
      span:
        start: 7
        end: 12

